--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 psycopg2-binary = "^2.9.9"
 lxml = "^5.2.2"
+drf-yasg = "^1.21.7"
+setuptools = "^70.2.0"
 
 
 [build-system]
