--- a/infra/sample.env
+++ b/infra/sample.env
@@ -1,7 +1,7 @@
 DJANGO_SECRET_KEY='key'
 DEBUG=1
 ALLOWED_HOSTS = 127.0.0.1 localhost [::1]
-
+LOGGING_LEVEL = "WARNING"
 
 POSTGRES_DB="dbname"
 POSTGRES_USER="username"
